2016-09-01  John Dennis  <jdennis@redhat.com> 1.0.0beta2
  * Allow custom include root in setup.py as command line arg

  * Add TLS chacha20 poly1305 constants

  * Remove checks for whether a socket is open for reading. It's not
    possible for the binding to know in all cases, especially if the
    socket is created from an external socket passed in.

2015-09-03  John Dennis  <jdennis@redhat.com> 1.0.0beta1
  The primary enhancement in this version is support for Python3
  Single code base supports both Py2 (minimum version 2.7) and Py3
  
      When built for Py2:
       - text will be a Unicode object
       - binary data will be a str object
       - ints will be Python long object
      When built for Py3:
       - text will be a str object
       - binary data will be a bytes object
       - ints will be a Python int object

      All pure Python tests and examples have been ported to Py3
      syntax but should continue to run under Py2.
	
  * The following class methods were added:

    - PK11Slot.check_security_officer_passwd
    - PK11Slot.check_user_passwd
    - PK11Slot.change_passwd
    - PK11Slot.init_pin

2014-11-07  John Dennis  <jdennis@redhat.com> 0.17.0
  The primary enhancement in this version is adding support for PBKDF2

  * The following module functions were added:

    - nss.create_pbev2_algorithm_id

  * The following class methods were added:

    - nss.AlgorithmID.get_pbe_crypto_mechanism
    - nss.AlgorithmID.get_pbe_iv

    - nss.PK11Slot.pbe_key_gen
    - nss.PK11Slot.format_lines
    - nss.PK11Slot.format

    - nss.Pk11SymKey.format_lines
    - nss.Pk11SymKey.format

    - nss.SecItem.to_base64
    - nss.SecItem.format_lines
    - nss.SecItem.format

	* The following files were added:

    - doc/examples/pbkdf2_example.py

  * The SecItem constructor added 'ascii' parameter to permit initialization
    from base64 and/or PEM textual data.

2014-10-21  John Dennis  <jdennis@redhat.com> 0.16.0